force-app/main/default/objects/Portal_Membership_Setting__mdt/Portal_Membership_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Portal Zone Membership Setting</label>
    <pluralLabel>Portal Zone Membership Settings</pluralLabel>
</CustomObject>