force-app/main/default/objects/Portal_Membership_Setting__mdt/fields/Constituent_types_for_case_approval__c.field-meta.xml
<CustomField>
    <fullName>Constituent_types_for_case_approval__c</fullName>
    <inlineHelpText>Comma separated list of constituent type values for case insertion. This will allow you to specify certain constituent types for case insertion while &apos;Membership record insertion&apos; is set to direct insertion.</inlineHelpText>
    <label>Constituent types for case approval</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>