force-app/main/default/objects/Portal_Membership_Setting__mdt/fields/Constituent_types_to_add_to_zones__c.field-meta.xml
<CustomField>
    <fullName>Constituent_types_to_add_to_zones__c</fullName>
    <description>Comma separate list of constituent type API values to include in zones by geolocation.</description>
    <label>Constituent types to add to zones</label>
    <length>255</length>
    <type>Text</type>
</CustomField>