force-app/main/default/objects/Portal_Membership_Setting__mdt/fields/Constituent_types_to_exclude_to_zones__c.field-meta.xml
<CustomField>
    <fullName>Constituent_types_to_exclude_to_zones__c</fullName>
    <description>Comma separate list of constituent type API values to exclude from adding by geolocation to zones.</description>
    <label>Constituent types to exclude to zones</label>
    <type>TextArea</type>
</CustomField>