force-app/main/default/objects/Portal_Membership_Setting__mdt/fields/Membership_record_insertion__c.field-meta.xml
<CustomField>
    <fullName>Membership_record_insertion__c</fullName>
    <description>Determines how zone membership records are saved based.</description>
    <label>Membership record insertion</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct insertion</fullName>
                <default>true</default>
                <label>Direct insertion</label>
            </value>
            <value>
                <fullName>Create case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>