force-app/main/default/objects/Portal_Membership_Setting__mdt/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <description>The order in which tables will display on the my memberships page.</description>
    <label>Order Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>