force-app/main/default/objects/Portal_Membership_Setting__mdt/fields/Prevent_is_on_newsletter_helper_text__c.field-meta.xml
<CustomField>
    <fullName>Prevent_is_on_newsletter_helper_text__c</fullName>
    <label>Prevent is on newsletter helper text</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>