force-app/main/default/objects/Portal_Membership_Setting__mdt/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <description>Zone record type name where these settings will be applied.</description>
    <label>Record Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>