force-app/main/default/objects/Portal_Membership_Setting__mdt/fields/Show_on_directory__c.field-meta.xml
<CustomField>
    <fullName>Show_on_directory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if show on directory column in shown on the my membership page.</description>
    <label>Show on directory</label>
    <type>Checkbox</type>
</CustomField>