force-app/main/default/objects/Portal_Membership_Setting__mdt/fields/Table_Header__c.field-meta.xml
<CustomField>
    <fullName>Table_Header__c</fullName>
    <label>Table Header</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>