force-app/main/default/objects/Portal_Membership_Setting__mdt/fields/Values_for_checking_is_on_newsletter__c.field-meta.xml
<CustomField>
    <fullName>Values_for_checking_is_on_newsletter__c</fullName>
    <description>Comma separated list of service indicator values to not allow direct checking of the is on newsletter field on zone membership records. Those zone membership records will be created but a case will be created for enabling the is show on newsletter field.</description>
    <inlineHelpText>Comma separated list of service indicator values.</inlineHelpText>
    <label>Values for checking is on newsletter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>