force-app/main/default/objects/Portal_Membership_Setting__mdt/fields/Zone_display_types__c.field-meta.xml
<CustomField>
    <fullName>Zone_display_types__c</fullName>
    <description>Determines how the my membership page should display zones.</description>
    <inlineHelpText>Determines how the my membership page should display zones.</inlineHelpText>
    <label>Zone display types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All zones</label>
            </value>
            <value>
                <fullName>Active zone memberships</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>